--- a/style.css
+++ b/style.css
@@ -36,20 +36,10 @@ body{
     text-decoration: none;
 }
 
-
-
-/* inserir na classe container
-display: grid;
-grid-template-columns: 50% 50%;
-
-para isso add uma div no html
-
-após configurar o html inserir a classe do botão secundário
-
 .botao_secundario {
     background-color: transparent;
-    border: 2px solid var(--branco-principal)
+    border: 2px solid var(--branco-principal);
 }
 
-*/
+
 
