--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@
     --cinza-secundario: #c0c0c0;
     --botao-azul: #167bf7;
     --cor-de-fundo: #00030c;
-    */--fonte-principal: "Inter";*/
+    --fonte-principal: "Inter"; /* add */
 }
 
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
-   /* font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 400; /*
+    font-family: var(--fonte-principal); /* add */
+    font-size: 16px; /* add */
+    font-weight: 400; /* add */
 }
 
 * {
@@ -20,7 +20,7 @@ body{
 }
 
 .principal {
-    background-image: ;
+    background-image: url("img/Background.png"); /* add */
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -43,6 +43,16 @@ body{
 .botao_secundario {
     background-color: transparent;
     border: 2px solid var(--branco-principal);
+}
+/* add as duas classes abaixo */
+.container__aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+
+.container__titulo {
+    font-size: 28px;
+    font-weight: 700;
 }
 
 
