--- a/style.css
+++ b/style.css
@@ -3,15 +3,16 @@
     --cinza-secundario: #c0c0c0;
     --botao-azul: #167bf7;
     --cor-de-fundo: #00030c;
-    --fonte-principal: "Inter"; /* add */
+    --fonte-principal: "Inter";
+    --botao-azul-efeito: #3c92fa; /* add 18/06 */
 }
 
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
-    font-family: var(--fonte-principal); /* add */
-    font-size: 16px; /* add */
-    font-weight: 400; /* add */
+    font-family: var(--fonte-principal); 
+    font-size: 16px; 
+    font-weight: 400; 
 }
 
 * {
@@ -20,9 +21,11 @@ body{
 }
 
 .principal {
-    background-image: url("img/Background.png"); /* add */
+    background-image: url("img/Background.png"); 
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center; /* add 18/06 */
+    text-align: center; /* add 18/06 */
 }
 
 .container {
@@ -38,13 +41,14 @@ body{
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
+    margin-bottom: 1em; /* add 18/06*/
 }
 
 .botao_secundario {
     background-color: transparent;
     border: 2px solid var(--branco-principal);
 }
-/* add as duas classes abaixo */
+
 .container__aviso {
     font-size: 12px;
     color: var(--cinza-secundario);
@@ -54,6 +58,102 @@ body{
     font-size: 28px;
     font-weight: 700;
 }
+/* add 18/06*/
+.container__imagem {
+    margin: 1em 0 2em 0;
+}
+
+.container__caixa {
+    margin: 0 6em;
+}
+
+.secundario__imagem {
+    width: 80%;
+}
+
+.secundario {
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto {
+    color: var(--cinza-secundario);
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
+}
+
+.dispositivos__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
+
+.dispositivos {
+    text-align: center;
+}
+
+.dispositivos__titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
+
+.lista__item {
+    font-size: 32px;
+    color: var(--branco-principal);
+}
+
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.rodape__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+
+.lista__link a{
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
+}
+
+.rodape__texto {
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+.lista__link a:hover {
+    color: var(--botao-azul);
+}
+
+.lista__link a:active {
+    color: purple;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
+}
+
 
 
 
