--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body{
     color: var(--branco-principal);
     margin-left: 1em;
 }
-/*próxima aula*/
+/*add 01/07*/
 .rodape__texto {
     margin: 1em 0;
     color: var(--cinza-secundario);
